--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "require": {
         "psr/container": "^1.0",
-        "duncan3dc/blade": "^4.10"
+        "duncan3dc/blade": "^4.10",
+        "topthink/think-template": "^2.0"
     }
 }
