--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "psr/container": "^1.0",
         "duncan3dc/blade": "^4.10",
-        "topthink/think-template": "^2.0"
+        "topthink/think-template": "^2.0",
+        "psr/log": "^1.1"
     }
 }
